profilelist1exp/unpackaged/objects/Opportunity_Team_Mirror__c.object
<CustomObject>
    <fields>
        <fullName>OpportunityAccessLevel__c</fullName>
        <description>Picklist Changed to Text</description>
        <label>Opportunitiy Access</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamMemberRole__c</fullName>
        <description>Picklist changed to Text</description>
        <label>Team Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Team_Mirrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Team Archive</label>
    <nameField>
        <label>Team Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Teams Archive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>